--- a/kompas/index.html
+++ b/kompas/index.html
@@ -398,6 +398,16 @@
                             icon: "https://i.ibb.co/MD24NQkJ/image.png",
                             url: "https://grumqy.github.io/fangea/wiki/stany_zjednoczone/"
                         }
+                        {
+                            name: "Cesarstwo Taj-Hoi",
+                            icon: "https://i.ibb.co/4nsTgJPn/image.png",
+                            url: "https://grumqy.github.io/fangea/wiki/taj-hoi/"
+                        }
+                        {
+                            name: "Związek Ekwalijski",
+                            icon: "https://i.ibb.co/5XbBZhMp/image.png",
+                            url: "https://grumqy.github.io/fangea/wiki/ekwalia/"
+                        }
                     ]
                 },
             {
@@ -421,7 +431,7 @@
                         },
                         {
                             name: "Iturium Hewu",
-                            icon: "https://i.ibb.co/1Y6f0h9f/obraz-2025-05-12-162008402.png",
+                            icon: "https://i.ibb.co/20ZPp14m/obraz-2025-05-12-162235528.png",
                             url: "https://grumqy.github.io/fangea/wiki/hew/"
                         },
                         {
