--- a/kompas/index.html
+++ b/kompas/index.html
@@ -416,7 +416,7 @@
                     posX: 0.5,
                     posY: -3.8,
                     avatar: "https://i.ibb.co/4ZPn65TZ/obraz-2025-05-12-115105711.png",
-                    description: "Brak opisu.",
+                    description: "Administrator serwera Discord, twórca pierwszej mapy związanej z Roleplay'em a zarazem osoba z największą liczbą zarządzanych państw. Wykorzystuję projekt jako okazję do kształcenia się w dziedziniach grafiki i rysowania z którymi styczność mam od niedawna w ramach pasji. Fan motocykli, książek, ekonomii i geografii.",
                     views: "Socjallibertarianizm, Cywilny libertarianizm, Transhumanizm, Piratyzm, Technoliberalizm, Demokracja bezpośrednia",
                     roles: [
                         {
