--- a/kompas/index.html
+++ b/kompas/index.html
@@ -311,7 +311,7 @@
                     posX: 1.6,
                     posY: 1,
                     avatar: "https://i.ibb.co/kV3LFn2w/obraz-2025-05-12-172050994.png",
-                    description: "Członek Roleplay'u od około 2022 roku. Właściciel 5 państw. Przedstawiciel kasty niegraficznej, a roleplay'owej. Często bywam nieaktywny oraz zdarza mi się mieć odmienne zdanie w wielu kwestiach. Interesuję się polityką, historią, muzyką i filmografią.",
+                    description: "Członek Roleplay'u od około 2022 roku. Właściciel czterech państw. Przedstawiciel kasty niegraficznej, a roleplay'owej. Często bywam nieaktywny oraz zdarza mi się mieć odmienne zdanie w wielu kwestiach. Interesuję się polityką, historią, muzyką i filmografią.",
                     views: "Liberalizm gospodarczy, Kapitalizm, Nacjonalizm, Unitaryzm, Etatyzm",
                     roles: [
                         {
