--- a/kompas/index.html
+++ b/kompas/index.html
@@ -451,6 +451,22 @@
                         }
                     ]
                 },
+                {
+                    nick: "Michalik",
+                    discord: "michalik",
+                    posX: 0.2,
+                    posY: 4.5,
+                    avatar: "https://i.ibb.co/d4KfNnTD/obraz-2025-05-12-115841309.png",
+                    description: "Brak opisu.",
+                    views: "Brak danych",
+                    roles: [
+                        {
+                            name: "Republika Alezjo-Onecji",
+                            icon: "https://i.ibb.co/F4qhgTrJ/image.png",
+                            url: "https://grumqy.github.io/fangea/wiki/alezjo-onecja/"
+                        }
+                    ]
+                },
             ];
     
         function initPins() {
