--- a/kompas/index.html
+++ b/kompas/index.html
@@ -312,7 +312,7 @@
                     posY: 1,
                     avatar: "https://i.ibb.co/kV3LFn2w/obraz-2025-05-12-172050994.png",
                     description: "Członek Roleplay'u od około 2022 roku. Właściciel czterech państw. Przedstawiciel kasty niegraficznej, a roleplay'owej. Często bywam nieaktywny oraz zdarza mi się mieć odmienne zdanie w wielu kwestiach. Interesuję się polityką, historią, muzyką i filmografią.",
-                    views: "Liberalizm gospodarczy, Kapitalizm, Nacjonalizm, Unitaryzm, Etatyzm",
+                    views: "Protekcjonizm, Regulowany kapitalizm, Nacjonalizm, Unitaryzm, Etatyzm",
                     roles: [
                         {
                             name: "Iznotiańska Republika Demokratyczna",
@@ -375,7 +375,7 @@
                     posY: -2.8,
                     avatar: "https://i.ibb.co/0Vzx598Y/image.png",
                     description: "Najmłodszy członek Roleplay'u oraz administrator serwera Discord. Aspiruję do zastania profesjonalnym grafikiem komputerowym w przyszłości. W samym Roleplay'u pełnię rolę pomocnika, świadcząc swojej pomocy głównie przy mapach, flagach i innych pomniejszych rzeczach powiązanych z Roleplay'em.",
-                    views: "Ordoliberalizm, Federalizm centralistyczny, Liberalizm społeczny, Umiarkowany progresywizm",
+                    views: "Ordoliberalizm, Umiarkowany federalizm, Liberalizm społeczny, Umiarkowany progresywizm",
                     roles: [
                         {
                             name: "Konfederacja Montecydyjska",
@@ -390,8 +390,8 @@
                     posX: 3.5,
                     posY: -4.6,
                     avatar: "https://i.ibb.co/d4KfNnTD/obraz-2025-05-12-115841309.png",
-                    description: "Brak opisu.",
-                    views: "Brak danych",
+                    description: "Jeden z ojców-żałożycieli Roleplay'u, twórca części jego fundamentów począwszy od 2020 roku. Piszę artykuły na wiki, newsy do gazety oraz zajmuję się tworzeniem nieskomplikowanych grafik. Objawiam sporadyczne epizody nieaktywności. Moje zainteresowania to historia oraz szeroko pojęta muzyka rockowa.",
+                    views: "Minarchizm, Federalizm, Austriacka Szkoła Ekonomii, Libertarianski feminizm, Transhumanizm, Monetaryzm",
                     roles: [
                         {
                             name: "Stany Zjednoczone Fangei",
@@ -417,7 +417,7 @@
                     posY: -3.8,
                     avatar: "https://i.ibb.co/4ZPn65TZ/obraz-2025-05-12-115105711.png",
                     description: "Administrator serwera Discord, twórca pierwszej mapy związanej z Roleplay'em a zarazem osoba z największą liczbą zarządzanych państw. Wykorzystuję projekt jako okazję do kształcenia się w dziedziniach grafiki i rysowania z którymi styczność mam od niedawna w ramach pasji. Fan motocykli, książek, ekonomii i geografii.",
-                    views: "Socjallibertarianizm, Cywilny libertarianizm, Transhumanizm, Piratyzm, Technoliberalizm, Demokracja bezpośrednia",
+                    views: "Socjallibertarianizm, Cywilny libertarianizm, Paternalistyczny libertarianizm, Piratyzm, Technoliberalizm, Demokracja bezpośrednia",
                     roles: [
                         {
                             name: "Księstwo Nowego Tuhalfu",
