--- a/kompas/index.html
+++ b/kompas/index.html
@@ -280,7 +280,7 @@
                     posY: 0.5,
                     avatar: "https://i.ibb.co/d4KfNnTD/obraz-2025-05-12-115841309.png",
                     description: "Brak opisu.",
-                    views: "Brak danych",
+                    views: "Socjalliberalizm, Centryzm",
                     roles: [
                         {
                             name: "Republika Fankladonii",
