--- a/kompas/index.html
+++ b/kompas/index.html
@@ -391,7 +391,7 @@
                     posY: -4.6,
                     avatar: "https://i.ibb.co/d4KfNnTD/obraz-2025-05-12-115841309.png",
                     description: "Jeden z ojców-żałożycieli Roleplay'u, twórca części jego fundamentów począwszy od 2020 roku. Piszę artykuły na wiki, newsy do gazety oraz zajmuję się tworzeniem nieskomplikowanych grafik. Objawiam sporadyczne epizody nieaktywności. Moje zainteresowania to historia oraz szeroko pojęta muzyka rockowa.",
-                    views: "Minarchizm, Federalizm, Austriacka Szkoła Ekonomii, Libertarianski feminizm, Transhumanizm, Monetaryzm",
+                    views: "Minarchizm, Federalizm, Austriacka Szkoła Ekonomii, Libertariański feminizm, Transhumanizm, Monetaryzm",
                     roles: [
                         {
                             name: "Stany Zjednoczone Fangei",
