--- a/kompas/index.html
+++ b/kompas/index.html
@@ -259,7 +259,7 @@
                     posY: 0.5,
                     avatar: "https://i.ibb.co/NdWbvG3R/obraz-2025-05-12-160543464.png",
                     description: "Administrator serwera Discord i członek Roleplay'u z 3-letnim stażem. Najczęściej zajmuję się pisaniem formułek, które można znaleźć na stronie internetowej oraz serwerze społecznościowym. Do moich zainteresowań należy historia, geografia oraz praca w McDonald's.",
-                    views: "Brak danych",
+                    views: "Tradycjonalizm, Cywilny nacjonalizm, Globalizm gospodarczy, Neoliberalizm, Monetaryzm, Neolibertarianizm",
                     roles: [
                         {
                             name: "Republika Liwonii",
