--- a/kompas/index.html
+++ b/kompas/index.html
@@ -278,7 +278,7 @@
                     discord: "nie_wiem_jakis_random_122",
                     posX: -1.5,
                     posY: 0.5,
-                    avatar: "https://i.ibb.co/d4KfNnTD/obraz-2025-05-12-115841309.png",
+                    avatar: "https://i.ibb.co/mZ2KbTM/image.png",
                     description: "Brak opisu.",
                     views: "Socjalliberalizm, Centryzm",
                     roles: [
@@ -294,7 +294,7 @@
                     discord: "novites",
                     posX: -1,
                     posY: 2.8,
-                    avatar: "https://i.ibb.co/d4KfNnTD/obraz-2025-05-12-115841309.png",
+                    avatar: "https://i.ibb.co/1YzKJkCX/image.png",
                     description: "Brak opisu.",
                     views: "Brak danych",
                     roles: [
@@ -389,7 +389,7 @@
                     discord: "svh6296",
                     posX: 3.5,
                     posY: -4.6,
-                    avatar: "https://i.ibb.co/d4KfNnTD/obraz-2025-05-12-115841309.png",
+                    avatar: "https://i.ibb.co/n8rV81Zs/image.png",
                     description: "Jeden z ojców-żałożycieli Roleplay'u, twórca części jego fundamentów począwszy od 2020 roku. Piszę artykuły na wiki, newsy do gazety oraz zajmuję się tworzeniem nieskomplikowanych grafik. Objawiam sporadyczne epizody nieaktywności. Moje zainteresowania to historia oraz szeroko pojęta muzyka rockowa.",
                     views: "Minarchizm, Federalizm, Austriacka Szkoła Ekonomii, Libertariański feminizm, Transhumanizm, Monetaryzm",
                     roles: [
@@ -456,7 +456,7 @@
                     discord: "michalik",
                     posX: 0.2,
                     posY: 4.5,
-                    avatar: "https://i.ibb.co/d4KfNnTD/obraz-2025-05-12-115841309.png",
+                    avatar: "https://i.ibb.co/mFT7gVck/image.png",
                     description: "Brak opisu.",
                     views: "Brak danych",
                     roles: [
