--- a/kompas/index.html
+++ b/kompas/index.html
@@ -359,7 +359,7 @@
                     posY: -2,
                     avatar: "https://i.ibb.co/hGthdxW/obraz-2025-05-12-110716160.png",
                     description: "Najdłużej obecny członek Roleplay'u, jeden z założycieli oraz administrator serwera Discord. Łączę przyjemne z pożytecznym więc naukę grafiki 3D łączę z moją działalnością w Roleplay'u. W wolnym czasie moją pasją jest przede wszystkim kino.",
-                    views: "Liberalizm klasyczny, Kapitalizm, Leseferyzm, Globalizm, Federalizm, Merytokracja",
+                    views: "Liberaltarianizm, Liberalizm klasyczny, Globalizm gospodarczy, Federalizm, Merytokracja, Umiarkowany progresywizm",
                     roles: [
                         {
                             name: "Rzeczpospolita Pamercja",
