--- a/kompas/index.html
+++ b/kompas/index.html
@@ -279,7 +279,7 @@
                     posX: -1.5,
                     posY: 0.5,
                     avatar: "https://i.ibb.co/mZ2KbTM/image.png",
-                    description: "Brak opisu.",
+                    description: "Członek Roleplay'u od 2022 roku, najpierw zarządzał Peczerią, od 2024 roku zajmuje się Fankladonią. Pierwotnie królowałem w dawnej Pieczarii, po banicji z tegoż ambitnego królestwa wróciłem budować masonerię Fankladonii. Interesuję się architekturą, me skrajne poglądy centrysty doprowadziły do zabudowania kilku miast tylko kamienicami.",
                     views: "Socjalliberalizm, Centryzm",
                     roles: [
                         {
