--- a/widget.html
+++ b/widget.html
@@ -14,20 +14,15 @@
     .fangea-widget {
       position: fixed;
       bottom: 20px;
-      right: -100px;
-      width: 320px;
-      height: 320px;
-      background: rgba(27, 38, 47, 0.85);
+      right: -280px;
+      width: 300px;
+      background: rgb(27, 38, 47);
       color: white;
-      border-radius: 50%;
-      box-shadow: 0 0 30px rgba(0, 0, 0, 0.4);
-      backdrop-filter: blur(10px);
+      border-radius: 16px;
+      box-shadow: 0 0 20px rgba(0, 0, 0, 0.4);
       z-index: 99999;
-      padding: 40px;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      transition: right 0.4s ease;
+      padding: 20px;
+      transition: right 0.3s ease;
     }
 
     .fangea-widget:hover {
@@ -37,7 +32,6 @@
     .fangea-content {
       font-size: 14px;
       text-align: left;
-      max-width: 100%;
       line-height: 1.5;
     }
 
@@ -69,9 +63,9 @@
       <ul>
         <li>Zainstaluj <a href="https://www.tampermonkey.net/" target="_blank">Tampermonkey</a> na swojej przeglądarce.</li>
         <li>Skopiuj nasz gotowy <a onclick="copyScript()">skrypt</a>.</li>
-        <li>Następnie przejdź do Tampermonkey i wklej skrypt jako nową regułę.</li>
+        <li>Wklej go jako nową regułę w Tampermonkey.</li>
       </ul>
-      <p>Od tej pory odtwarzacze YouTube w naszych playlistach zyskają nowy, radiowy wygląd i jeszcze większą immersję!</p>
+      <p>Odtwarzacze YouTube w naszych playlistach zyskają nowy, radiowy wygląd!</p>
     </div>
   </div>
 
