--- a/widget.html
+++ b/widget.html
@@ -25,7 +25,7 @@
     .fangea-hover-area {
       position: absolute;
       top: 0;
-      right: 0;
+      right: 280px;
       width: 40px;
       height: 100%;
       background: transparent;
