--- a/widget.html
+++ b/widget.html
@@ -40,9 +40,8 @@ body {
   font-family: 'Montserrat', 'Montserrat Alternates', Arial, sans-serif;
 }
 
-/* Wysunięcie przy hoverze */
-.fangea-widget:hover {
-  right: 20;
+.fangea-container:hover .fangea-widget {
+  right: 20px;
 }
 
 .fangea-content {
