--- a/widget.html
+++ b/widget.html
@@ -10,69 +10,79 @@
         href="https://fonts.googleapis.com/css2?family=Montserrat+Alternates:wght@100;200;300;400;500;600;700;800;900&display=swap"
         rel="stylesheet">
 <style>
-body {
-  font-family: 'Montserrat', 'Montserrat Alternates', Arial, sans-serif;
-  margin: 0;
-  padding: 0;
-  background: transparent;
-}
+  .fangea-container {
+    position: fixed;
+    bottom: 20px;
+    right: 0;
+    width: 320px;
+    height: auto;
+    z-index: 99999;
+    pointer-events: none; /* kontener nie przeszkadza myszce */
+  }
 
-.fangea-container {
-  position: fixed;
-  bottom: 20px;
-  right: 0;
-  width: 340px;
-  height: auto;
-  z-index: 99999;
-}
+  .fangea-widget {
+    position: absolute;
+    right: -300px;
+    width: 320px;
+    background: rgb(27, 38, 47);
+    color: white;
+    border-radius: 16px 0 0 16px;
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.4);
+    padding: 20px;
+    transition: right 0.3s ease;
+    z-index: 2;
+    font-family: 'Montserrat', 'Montserrat Alternates', Arial, sans-serif;
+    pointer-events: auto;
+  }
 
-.fangea-widget {
-  position: relative;
-  right: -300px; /* 320px szerokości - 20px uchwytu */
-  width: 320px;   /* zwiększona szerokość widgetu */
-  background: rgb(27, 38, 47);
-  color: white;
-  border-radius: 16px 0 0 16px;
-  box-shadow: 0 0 20px rgba(0, 0, 0, 0.4);
-  padding: 20px;
-  transition: right 0.3s ease;
-  z-index: 2;
-  font-family: 'Montserrat', 'Montserrat Alternates', Arial, sans-serif;
-}
+  .fangea-tab {
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 20px;
+    height: 100%;
+    cursor: pointer;
+    z-index: 3;
+    pointer-events: auto;
+  }
 
-.fangea-container:hover .fangea-widget {
-  right: 20px;
-}
+  /* Wysunięcie widgetu tylko jeśli najechano na "wystającą część" */
+  .fangea-tab:hover + .fangea-widget,
+  .fangea-widget:hover {
+    right: 0;
+  }
 
-.fangea-content {
-  font-size: 14px;
-  text-align: left;
-  line-height: 1.5;
-}
+  .fangea-content {
+    font-size: 14px;
+    text-align: left;
+    line-height: 1.5;
+    padding-right: 10px;
+  }
 
-.fangea-content ul {
-  padding-left: 18px;
-  margin: 10px 0;
-}
+  .fangea-content ul {
+    padding-left: 18px;
+    margin: 10px 0;
+  }
 
-.fangea-content li {
-  margin-bottom: 6px;
-}
+  .fangea-content li {
+    margin-bottom: 6px;
+  }
 
-.fangea-content a {
-  color: #658aad;
-  font-weight: bold;
-  text-decoration: none;
-  cursor: pointer;
-}
+  .fangea-content a {
+    color: #658aad;
+    font-weight: bold;
+    text-decoration: none;
+    cursor: pointer;
+  }
 
-.fangea-content a:hover {
-  text-decoration: underline;
-}
-
+  .fangea-content a:hover {
+    text-decoration: underline;
+  }
 </style>
 
+
 <div class="fangea-container">
+  <div class="fangea-tab"></div> <!-- wystająca część -->
   <div class="fangea-widget">
     <div class="fangea-content">
       <p>Aby w pełni zanurzyć się w doświadczenie słuchania naszych stacji radiowych, dodaj do swojej przeglądarki rozszerzenie <strong>Fangea Rich Player</strong>!</p>
