--- a/widget.html
+++ b/widget.html
@@ -22,6 +22,7 @@
 
   .fangea-widget {
     position: absolute;
+    bottom: 0;
     right: -300px;
     width: 320px;
     background: rgb(27, 38, 47);
@@ -34,6 +35,7 @@
     font-family: 'Montserrat', 'Montserrat Alternates', Arial, sans-serif;
     pointer-events: auto;
   }
+
 
   .fangea-tab {
     position: absolute;
