--- a/radio/index.html
+++ b/radio/index.html
@@ -389,6 +389,7 @@
 </head>
 
 <body>
+    <iframe src="widget.html" style="position: fixed; bottom: 0; right: 0; width: 350px; height: 350px; border: none; z-index: 99999; background: transparent;" scrolling="no"></iframe>
     <header id="pageheader">
     </header>
     <main class="radio">
