--- a/radio/index.html
+++ b/radio/index.html
@@ -693,7 +693,7 @@ function filterRadioStations(){
     </script>
     <script src="/fangea/pageheader.js"></script>
     <script>
-  fetch('widget.html')
+  fetch('/fangea/widget.html')
     .then(res => res.text())
     .then(html => {
       const wrapper = document.createElement('div');
