--- a/widget.html
+++ b/widget.html
@@ -89,7 +89,7 @@
       <p>Aby w pełni zanurzyć się w doświadczenie słuchania naszych stacji radiowych, dodaj do swojej przeglądarki rozszerzenie <strong>Fangea Rich Player</strong>!</p>
       <ul>
         <li>Zainstaluj <a href="https://www.tampermonkey.net/" target="_blank">Tampermonkey</a> na swojej przeglądarce.</li>
-        <li>Skopiuj nasz gotowy <a onclick="copyScript()">skrypt</a>.</li>
+        <li>Skopiuj nasz gotowy <a href="#" id="copy-script-link">skrypt</a>.</li>
         <li>Wklej go jako nową regułę w Tampermonkey.</li>
       </ul>
       <p>Odtwarzacze YouTube w naszych playlistach zyskają nowy, radiowy wygląd!</p>
@@ -98,7 +98,10 @@
 </div>
 
 <script>
-  function copyScript() {
+  
+document.getElementById('copy-script-link').addEventListener('click', function(e) {
+  e.preventDefault();
+  
     const code = `// ==UserScript==
 // @name         YouTube → Fangea Rich Player
 // @namespace    http://tampermonkey.net/
@@ -524,10 +527,10 @@
   }, 500);
 })();`;
 
-    navigator.clipboard.writeText(code).then(() => {
-      alert("Skrypt został skopiowany do schowka!");
-    }).catch(err => {
-      alert("Nie udało się skopiować skryptu: " + err);
-    });
-  }
+  navigator.clipboard.writeText(code).then(() => {
+    alert("Skrypt został skopiowany do schowka!");
+  }).catch(err => {
+    alert("Nie udało się skopiować skryptu: " + err);
+  });
+});
 </script>
