--- a/widget.html
+++ b/widget.html
@@ -89,7 +89,7 @@
       <p>Aby w pełni zanurzyć się w doświadczenie słuchania naszych stacji radiowych, dodaj do swojej przeglądarki rozszerzenie <strong>Fangea Rich Player</strong>!</p>
       <ul>
         <li>Zainstaluj <a href="https://www.tampermonkey.net/" target="_blank">Tampermonkey</a> na swojej przeglądarce.</li>
-        <li>Skopiuj nasz gotowy <a href="#" id="copy-script-link">skrypt</a>.</li>
+        <li>Skopiuj nasz gotowy <a id="copy-script-link">skrypt</a>.</li>
         <li>Wklej go jako nową regułę w Tampermonkey.</li>
       </ul>
       <p>Odtwarzacze YouTube w naszych playlistach zyskają nowy, radiowy wygląd!</p>
