--- a/widget.html
+++ b/widget.html
@@ -98,11 +98,10 @@
 </div>
 
 <script>
-  
 document.getElementById('copy-script-link').addEventListener('click', function(e) {
   e.preventDefault();
   
-    const code = `// ==UserScript==
+  const code = `// ==UserScript==
 // @name         YouTube → Fangea Rich Player
 // @namespace    http://tampermonkey.net/
 // @version      1.1.2
@@ -527,10 +526,30 @@ document.getElementById('copy-script-link').addEventListener('click', function(e
   }, 500);
 })();`;
 
-  navigator.clipboard.writeText(code).then(function () {
-    alert('Skrypt został skopiowany do schowka!');
-  }).catch(function (err) {
-    alert('Nie udało się skopiować skryptu: ' + err);
-  });
+  // Tworzymy tymczasowy element textarea
+  const textarea = document.createElement('textarea');
+  textarea.value = code;
+  textarea.style.position = 'fixed';  // Poza ekranem
+  textarea.style.left = '-9999px';
+  textarea.style.top = '-9999px';
+  document.body.appendChild(textarea);
+  
+  // Zaznaczamy tekst
+  textarea.select();
+  
+  try {
+    // Próbujemy skopiować
+    const successful = document.execCommand('copy');
+    if (successful) {
+      alert('Skrypt został skopiowany do schowka!');
+    } else {
+      throw new Error('Nie udało się skopiować');
+    }
+  } catch (err) {
+    alert('Nie udało się skopiować skryptu. Skorzystaj z przycisku "Kopiuj" w przeglądarce.\n' + err);
+  } finally {
+    // Usuwamy textarea
+    document.body.removeChild(textarea);
+  }
 });
 </script>
