--- a/wiki/paywall/index.html
+++ b/wiki/paywall/index.html
@@ -38,7 +38,7 @@
 <p>Platforma zyskała popularność w branży pornograficznej. Zgodnie z oficjalnym regulaminem użytkownicy serwisu muszą mieć ukończone 18 lat. 20 listopada 2022 roku ogłoszono, że od 1 stycznia 2023 roku treści pornograficzne zostaną całkowicie usunięte i zakazane. Powodem jest presja wywierana przez przedsiębiorstwa obsługujące karty kredytowe. Zostaną jednak dopuszczone akty erotyczne, które będą definiowane przez regulamin jako „sztuka”. Decyzja spotkała się z mieszanym odbiorem – pojawiły się głosy, że takie działania mogą oznaczać stopniowe ograniczanie pornografii w mediach. Niedługo później serwis wycofał się jednak z tej decyzji.</p>
 
 <h1>Twórcy</h1>
-<p>We wrześniu 2022 r. streamerka <a href="https://grumqy.github.io/fangea/wiki/rohr.tv/">Rohr.tv</a>, <a href="https://grumqy.github.io/fangea/wiki/nancycatgirl/">Nancy</a>, powiedziała, że co miesiąc zarabia w serwisie 1,5 miliona dolarów fangejskich, a od momentu dołączenia na początku 2020 r. zarobiła łącznie ponad 33 miliony dolarów fangejskich. 9 grudnia 2022 r. YouTuber <a href="https://grumqy.github.io/fangea/wiki/ishowskills/">IShowSkills</a> uruchomił profil PayWall, a napływ ruchu spowodował awarię witryny.</p>
+<p>We wrześniu 2022 r. streamerka <a href="https://grumqy.github.io/fangea/wiki/rohr.tv/">Rohr.tv</a>, <a href="https://grumqy.github.io/fangea/wiki/nancycatgirl/">Nancy</a>, powiedziała, że co miesiąc zarabia w serwisie 1,5 miliona ferro fangejskich, a od momentu dołączenia na początku 2020 r. zarobiła łącznie ponad 33 miliony ferro fangejskich. 9 grudnia 2022 r. YouTuber <a href="https://grumqy.github.io/fangea/wiki/ishowskills/">IShowSkills</a> uruchomił profil PayWall, a napływ ruchu spowodował awarię witryny.</p>
  <div id="source-code" style="display:none;">{|infobox PayWall
 |c=2 [[timg:https://i.ibb.co/Bzrf29p/paywall.png|Logo]] |
 ! Państwo !| [[icon:https://i.ibb.co/bLd3Wcy/usf-flaga.webp|small]] (https://grumqy.github.io/fangea/wiki/stany_zjednoczone/)[Stany Zjednoczone] |
@@ -55,7 +55,7 @@ Platforma zyskała popularność w branży pornograficznej. Zgodnie z oficjalnym
 
 = Twórcy = 
 
-We wrześniu 2022 r. streamerka (https://grumqy.github.io/fangea/wiki/rohr.tv/)[Rohr.tv], (https://grumqy.github.io/fangea/wiki/nancycatgirl/)[Nancy], powiedziała, że co miesiąc zarabia w serwisie 1,5 miliona dolarów fangejskich, a od momentu dołączenia na początku 2020 r. zarobiła łącznie ponad 33 miliony dolarów fangejskich. 9 grudnia 2022 r. YouTuber (https://grumqy.github.io/fangea/wiki/ishowskills/)[IShowSkills] uruchomił profil PayWall, a napływ ruchu spowodował awarię witryny.</div>
+We wrześniu 2022 r. streamerka (https://grumqy.github.io/fangea/wiki/rohr.tv/)[Rohr.tv], (https://grumqy.github.io/fangea/wiki/nancycatgirl/)[Nancy], powiedziała, że co miesiąc zarabia w serwisie 1,5 miliona ferro fangejskich, a od momentu dołączenia na początku 2020 r. zarobiła łącznie ponad 33 miliony ferro fangejskich. 9 grudnia 2022 r. YouTuber (https://grumqy.github.io/fangea/wiki/ishowskills/)[IShowSkills] uruchomił profil PayWall, a napływ ruchu spowodował awarię witryny.</div>
 </article>
 </main>
 <script src="/fangea/pageheader.js"></script>
