--- a/waluty/index.html
+++ b/waluty/index.html
@@ -56,8 +56,8 @@
                                     <div class="currency-logo" style="background-image: url('https://i.ibb.co/yYDPKxW/usfkwadrat.png');"></div>
                                 </div>
                                 <div class="currency-data">
-                                    <div class="currency-name">UFD</div>
-                                    <div class="currency-description">Dolar Fangejski</div>
+                                    <div class="currency-name">USF</div>
+                                    <div class="currency-description">Ferro Fangejskie</div>
                                 </div>
                             </div>
                             <div class="currency-item">
@@ -175,8 +175,8 @@
                                     <div class="currency-logo" style="background-image: url('https://i.ibb.co/yYDPKxW/usfkwadrat.png');"></div>
                                 </div>
                                 <div class="currency-data">
-                                    <div class="currency-name">UFD</div>
-                                    <div class="currency-description">Dolar Fangejski</div>
+                                    <div class="currency-name">USF</div>
+                                    <div class="currency-description">Ferro Fangejskie</div>
                                 </div>
                             </div>
                             <div class="currency-item">
