--- a/waluty/index.html
+++ b/waluty/index.html
@@ -149,14 +149,14 @@
                 <label for="currency-value-input">Wartość w FNK</label>
             </div>
             <div id="switch-currencies-button"><i class="fa-solid fa-repeat"></i></div>
-            <div class="currency-calc-row" id="currency-output" data-selected-currency="UFD">
+            <div class="currency-calc-row" id="currency-output" data-selected-currency="USF">
                 <div class="select-label">
                     <div class="currency-item">
                         <div class="currency-logo-container">
                             <div class="currency-logo" style="background-image: url('https://i.ibb.co/yYDPKxW/usfkwadrat.png');"></div>
                         </div>
                         <div class="currency-data">
-                            <div class="currency-name">UFD</div>
+                            <div class="currency-name">USF</div>
                         </div>
                     </div>
                     <div class="currency-select">
@@ -265,7 +265,7 @@
                     </div>
                     
                 <input id="currency-value-output" type="number" readonly>
-                <label for="currency-value-output">Wartość w UFD</label>
+                <label for="currency-value-output">Wartość w USF</label>
             </div>
         </div>
     </main>
@@ -329,7 +329,7 @@ document.addEventListener('DOMContentLoaded', function() {
 });
     const exchangeRates = {
         FNK: 1.1,
-        UFD: 0.95,
+        USF: 0.95,
         REG: 1.35,
         IZM: 1.2,
         REB: 9.3,
