--- a/wiki/index.html
+++ b/wiki/index.html
@@ -71,10 +71,6 @@
                 <li><a href="https://grumqy.github.io/fangea/wiki/wizgard/">Wizgard</a></li>
             </ul> 
             <ul class="article-category">
-                <h1>Miasta</h1>
-                <li><a href="https://grumqy.github.io/fangea/wiki/lipławieck/">Lipławieck</a></li>
-            </ul> 
-            <ul class="article-category">
                 <h1>Postacie</h1>
                 <li><a href="https://grumqy.github.io/fangea/wiki/hans_von_wepzig/">Hans von Wepzig</a></li>
                 <li><a href="https://grumqy.github.io/fangea/wiki/neku/">Neku</a></li>
@@ -95,6 +91,12 @@
                 <li><a href="https://grumqy.github.io/fangea/wiki/zaren/">Zaren</a></li>
             </ul> 
             <ul class="article-category">
+                <h1>Technologia</h1>
+                <li><a href="https://grumqy.github.io/fangea/wiki/farnet/">FARNET</a></li>
+                <li><a href="https://grumqy.github.io/fangea/wiki/epsilon_interface_manager_5/">Epsilon Interface Manager 5</a></li>
+                <li><a href="https://grumqy.github.io/fangea/wiki/epsilon_3.1/">Epsilon 3.1</a></li>
+            </ul> 
+            <ul class="article-category">
                 <h1>Konflikty Zbrojne</h1>
                 <li><a href="https://grumqy.github.io/fangea/wiki/powstanie_ekwalijskie/">Powstanie Ekwalijskie</a></li>
             </ul>
@@ -108,11 +110,10 @@
             </ul> 
             <ul class="article-category">
                 <h1>Brak Kategorii</h1>
+                <li><a href="https://grumqy.github.io/fangea/wiki/lipławieck/">Lipławieck</a></li>
                 <li><a href="https://grumqy.github.io/fangea/wiki/kanały_telewizyjne_w_pamercji/">Kanały telewizyjne w Pamercji</a></li>
                 <li><a href="https://grumqy.github.io/fangea/wiki/the_grimscape/">The Grimscape</a></li>
                 <li><a href="https://grumqy.github.io/fangea/wiki/województwo_pomerańskie/">Województwo pomerańskie</a></li>
-                <li><a href="https://grumqy.github.io/fangea/wiki/farnet/">FARNET</a></li>
-                <li><a href="https://grumqy.github.io/fangea/wiki/epsilon_3.1/">Epsilon 3.1</a></li>
                 <li><a href="https://grumqy.github.io/fangea/wiki/pameryjskie_tablice_rejestracyjne/">Pameryjskie tablice rejestracyjne</a></li>
                 <li><a href="https://grumqy.github.io/fangea/wiki/hierarchia_dróg/">Hierarchia dróg</a></li>
             </ul>
